--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-js": "^1.1.5",
     "styled-components": "^6.1.11",
+    "vite-plugin-vercel": "^7.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
