--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_MONGODB_URL=https://sport-manage-system-backend.vercel.app
+# VITE_MONGODB_URL=https://sport-manage-system-backend.vercel.app
+VITE_MONGODB_URL=http://localhost:3001
